--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -15,6 +15,8 @@
         "typescript": "^3.9.5"
     },
     "dependencies": {
-        "@types/node": "^14.0.13"
+        "@types/formidable": "^1.0.31",
+        "@types/node": "^14.0.13",
+        "formidable": "^1.2.2"
     }
 }
